# Glasgow-Baxter

./: README.md  baxter_glasgow.sh
src/glasgow_baxter/: CMakeLists.txt  package.xml
src/glasgow_baxter/cfg/: block_stacker.yaml
src/glasgow_baxter/launch/: block_stacker.launch  block_stacker_calib.launch  face_tracker.launch  mimic.launch  octomap.launch
src/glasgow_baxter/msg/: DetectedSquare.msg  DetectedSquares.msg  TrackedSquare.msg  TrackedSquares.msg
src/glasgow_baxter/scripts/: face_tracker.py  mimic.py
src/glasgow_baxter/scripts/block_stacker/: block_stacker.py  block_stacker_calib.py  block_tracker.py  perception.py  square.py  state_machine.py  understanding.py  visualisation.py
src/glasgow_baxter_helpers/: CMakeLists.txt  package.xml  setup.py
src/glasgow_baxter_helpers/scripts/: avg_camera  rectify_camera
src/glasgow_baxter_helpers/src/glasgow_baxter_helpers/: __init__.py  baxter_ikhelper.py  baxter_node.py
