<?xml version="1.0"?>
<package>
    <name>glasgow_baxter</name>
    <version>0.0.1</version>
    <description>A set of demos that show how cool Baxter is.</description>
    <license>GPLv2</license>
    <url type="website">http://www.clopema.eu/</url> 

    <author email="0906578c@glasgow.ac.uk">Daniel Callander</author>
    <maintainer email="0906578c@glasgow.ac.uk">Daniel Callander</maintainer>

    <build_depend>rospy</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>baxter_core_msgs</run_depend>
    <run_depend>baxter_interface</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>glasgow_baxter_helpers</run_depend>

    <buildtool_depend>catkin</buildtool_depend>
</package>