<?xml version="1.0"?>
<package>
    <name>glasgow_baxter_helpers</name>
    <version>0.0.1</version>
    <description>A set of Python libraries to assist in creating Baxter nodes.</description>
    <license>GPLv2</license>
    <url type="website">http://www.clopema.eu/</url> 

    <author email="0906578c@glasgow.ac.uk">Daniel Callander</author>
    <maintainer email="0906578c@glasgow.ac.uk">Daniel Callander</maintainer>

    <run_depend>baxter_interface</run_depend>
    <run_depend>baxter_core_msgs</run_depend>

    <run_depend>rospy</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>image_geometry</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>message_runtime</run_depend>

    <buildtool_depend>catkin</buildtool_depend>
</package>